[project]
name = "get-papers-aathi"
version = "0.1.0"
description = ""
authors = [
    {name = "AATHIOBUSRE", email = "aathiobusre@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry]
packages = [
    { include = "get_papers" }
]
