[tool.poetry]
name = "get-papers-tests"
version = "0.1.2"
description = "Fetch PubMed papers with pharma/biotech affiliations"
authors = ["Aathi Obusre <aathiobusre@gmail.com>"]
readme = "README.md"
packages = [{ include = "get_papers" }]

[tool.poetry.scripts]
get-papers-list = "cli:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
